import { StyleSheet } from "react-native";

export default StyleSheet.create({
  map: {
    height: "100%",
    width: "100%",
  },

  titleContainer: {
    padding: 20,
    backgroundColor: "#fff",
  },

  title: {
    fontSize: 18,
  }
})
